# vauncher

./: Cargo.toml
core/: Cargo.toml
core/src/: lib.rs  manager.rs  modification.rs  serde.rs
core/src/modification/: github.rs  local.rs
core/tests/: vm_test.rs
core/tests/vm/: vauncher_testdir.json
core/tests/vm/mods/: mod_11439.json  mod_16537.json  mod_name.json
core/tests/vm/mods/mod_1/: mod.json
core/tests/vm/mods/mod_1/1.0.0/: main.js  package.json  vss-new-models.js  vss.js
core/tests/vm/mods/mod_1/1.0.0/assets/: README.md
core/tests/vm/mods/mod_1/1.0.0/assets/data/: game.lst
core/tests/vm/mods/mod_1/1.0.0/assets/data/resource/m3d/mechous/: m1.prm  m10.prm  m11.prm  m12.prm  m13.prm  m14.prm  m2.prm  m3.prm  m4.prm  m5.prm  m6.prm  m7.prm  m8.prm  m9.prm  r1.prm  r2.prm  r3.prm  r4.prm  r5.prm  u1.prm  u2.prm  u3.prm  u4.prm  u5.prm
core/tests/vm/mods/mod_2/: mod.json
core/tests/vm/mods/mod_2/1.0.0/: package.json  vss-fullscreen-game.js  vss.js
gui/: Cargo.toml
gui/src/: druid.rs  github.rs.old  l10n.rs  main.rs  prefs.rs  vcore.rs
gui/src/iwidget/: _state.rs  body.rs  mod.rs  nav.rs
gui/src/iwidget/body/: about.rs  main.rs  mods.rs  versions.rs
gui/src/iwidget/body/mods/: _state.rs  add.rs  empty.rs  list.rs
gui/src/iwidget/body/mods/add/: _state.rs  github.rs  local.rs
resources/i18n/en-US/: lang.ftl
resources/i18n/ru-RU/: lang.ftl
src/: main.rs  nav.rs
src/iwidget/: body.rs  link.rs  mod.rs
src/iwidget/body/: about.rs  main.rs  mods.rs
