[package]
name = "vauncher-gui"
version = "0.1.0"
edition = "2021"
authors = ["Vitaliy Busko <vitaliy.opensource@gmail.com>"]

[dependencies]
druid = { git = "https://github.com/linebender/druid/", rev = "afbe73b92e7f54a8c9e0800a1c440252b80ae0ba", features = ["im", "png"] }
druid-widget-nursery = { path = "../../../github/druid-widget-nursery" }
md-5 = "0.10.1"
octocrab = "0.16.0"
tokio = "1.19"
serde = "1.0"
serde_json = "1.0"
vcore = { path = "../core", package = "vauncher-core" }