[package]
name = "vauncher-gui"
version = "0.1.0"
edition = "2021"
authors = ["Vitaliy Busko <vitaliy.opensource@gmail.com>"]

[dependencies]
#druid = { git = "https://github.com/linebender/druid/", rev = "115e46c5fcb9f6f08aeae406bc60f4493aff716e", features = ["im", "png"] }
druid = "0.8.0"
druid-widget-nursery = { git = "https://github.com/linebender/druid-widget-nursery" }
md-5 = "0.10.1"
octocrab = "0.16.0"
tokio = "1.19"
serde = "1.0"
serde_json = "1.0"
vcore = { path = "../core", package = "vauncher-core" }
